# protomanage

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  todo.md
protomanage/: __init__.py  __main__.py  base.py  cli.py  exceptions.py  execution_context.py  repo.py  strings.py  test.py  words.py
protomanage/base/: item.py  repo.py
protomanage/base/ai_slop/: enhanced_repo.py  enhanced_repo_examples.py  enhanced_repository_system.md  integration_guide.py
protomanage/core/: __init__.py  inbox.py
protomanage/entry_points/: cli.py
protomanage/items/: __init__.py  inbox_item.py  item.py
protomanage/legacy_temporary_experimental/: base.py  test.py
protomanage/misc/: exceptions.py  text_edit.py
protomanage/plugins/protomanage.core.config/: __init__.py  config.py
protomanage/plugins/protomanage.core.inbox/: __init__.py  inbox.py
